--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@react-email/components": "^0.0.42",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.10",
     "@upstash/ratelimit": "^2.0.5",
@@ -31,7 +32,9 @@
     "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^4.0.16",
     "react-icons": "^5.5.0",
+    "resend": "^4.5.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0"
   },
